fix(header): center align items in header

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -15,7 +15,7 @@
     display: flex;
     align-items: center;
     padding: 0 2vw;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 7vh;
     z-index: 1000;
 }
